--- a/experiencia.html
+++ b/experiencia.html
@@ -35,11 +35,11 @@
                         <div class="año">2013</div>
                         <div class="empresa">Instituto Obra Social de las Fuerzas Armadas y de Seguridad (IOSFA)</div>
                     </div>
-                    <p>Ingresé en el Instituto de Obra Social del Ejército (IOSE) en el año 2013, dentro del sector de Mesade Entradas, donde hacía tareas administrativas.</p>
+                    <p>Ingresé en el Instituto de Obra Social del Ejército (IOSE) en el año 2013, dentro del sector de Mesa de Entradas, donde hacía tareas administrativas.</p>
                     <p>Luego, a partir de 2016, comenzó un proceso de unificación entre las Obras Sociales de las tres Fuerzas Armadas, entre las cuales se encontraba IOSE, el instituto en el cual me encontraba trabajando. Este proceso de unificación dió creación a una nueva Obra Social: Instituto de Obra Social de las Fuerzas Armadas y de Seguridad (IOSFA).</p>
                     <p>Con este proceso de unificación, se crearon nuevos sectores dentro de la organización, entre ellos la Unidad de Comunicación, donde me pasaron en 2017, para llevar adelante junto al equipo un fuerte trabajo de comunicación para el logro de dicha integración.</p>
-                    <p>Dentro de esta Unidad, me desempeño principalmente dentro del área de la Comunicación Interna, donde el desafío principal consiste en constuir una nueva identidad y cultura organizacional dentro del ambiente interno del Instituto.</p>
-                    <p>Además, dentro del sector, nos desempeñamos de manera conjunta para la planificación, ejecución y evaluación de campañas y planes anuales de comunicación.</p>
+                    <p>Dentro de esta Unidad, me desempeño principalmente en el área de la Comunicación Interna, donde el desafío principal consiste en constuir una nueva identidad y cultura organizacional dentro del ambiente interno del Instituto.</p>
+                    <p>Además, en el sector, nos desempeñamos de manera conjunta para la planificación, ejecución y evaluación de campañas y planes anuales de comunicación.</p>
                 </div>
             </div>
         </main>
