--- a/educacion.html
+++ b/educacion.html
@@ -4,6 +4,11 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="keywords" content="relaciones publicas, relaciones públicas, relacionista publica, relacionista pública, rrpp, programadora, programador, programadora web, programador web, programacion, programación, comunicacion, comunicación, licenciada, licenciado" />
+        <meta name="description" content="Mi formación educativa." />
+        <meta property="og:title" content=“CV Florencia Frau” />
+        <meta property="og:url" content="https://florfrau.netlify.com/" />
+        <meta property="og:image" content="https://github.com/florenciafrau/CV/blob/master/cv.png" />
         <title>Florencia Frau</title>
         <link href="general.css" rel="stylesheet" />
         <link href="educacion.css" rel="stylesheet" />
