--- a/educacion.html
+++ b/educacion.html
@@ -36,17 +36,18 @@
             <div class="educaciones">
                 <h3 class="educacion-h">Formación educativa</h3>
                 <div class="educacion">
-                    <div class="año">2008</div>
+                    <div class="año">2012</div>
                     <div class="edu">
                         <div class="titulo">Título secundario: Comercial con orientación en Computación</div>
                         <div class="instituto">Instituto Santa Rita</div>
                     </div>
                 </div>
                 <div class="educacion">
-                    <div class="año">2013</div>
+                    <div class="año">2018</div>
                     <div class="edu">
                         <div class="titulo">Licenciada en Relaciones Públicas</div>
                         <div class="instituto">Universidad de Ciencias Empresariales y Sociales (UCES)</div>
+                        <a class="tesis" href="trabajofinalgrado.pdf">Trabajo Final de Grado</a>
                     </div>
                 </div>
                 <div class="educacion">
