--- a/sobreMi.html
+++ b/sobreMi.html
@@ -36,7 +36,7 @@
         <main id="contenido">
             <div class="presentacion">
                 <div class="foto">
-                    <img class="foto-img" src="fotoCv.jpg" alt="Foto" />
+                    <img class="foto-img" src="foto1.jpg" alt="Foto" />
                 </div>
                 <div class="quienSoy">
                     <h3>¿Quién soy?</h3>
