--- a/sobreMi.html
+++ b/sobreMi.html
@@ -41,7 +41,7 @@
                 <div class="quienSoy">
                     <h3>¿Quién soy?</h3>
                     <p>La honestidad, responsabilidad y calidez humana son los valores con los que más me manejo en los diferentes ámbitos de mi vida. Me gusta desenvolverme en ambientes de trabajo donde la dinámica del equipo es fluída y descontracturada en combinación con la responsabilidad y el compañerismo.</p>
-                    <p>Creo que siempre hay algo nuevo que aprender, razón por la cual considero que el crecimiento profesional es un camino sin punto final. Soy una persona proactiva que le gusta aprender y estar desarrollándome constantemente.</p>
+                    <p>Creo en el valor humano como el principal hilo conductor del accionar para tener buenos resultados en todos los ámbitos de la vida, y esto también aplica a las organizaciones y trabajos. Visualizar que detrás de cada objetivo hay una persona y entender que todo lo que hacemos está dirigido a esas personas es respetar su diversidad y valor humano que, inevitablemente como una consecuencia natural, trae sus frutos.</p>
                 </div>
             </div>
 
