--- a/experiencia.html
+++ b/experiencia.html
@@ -45,6 +45,12 @@
                     <p>Con este proceso de unificación, se crearon nuevos sectores dentro de la organización, entre ellos la Unidad de Comunicación, donde me pasaron en 2017, para llevar adelante junto al equipo un fuerte trabajo de comunicación para el logro de dicha integración.</p>
                     <p>Dentro de esta Unidad, me desempeño principalmente en el área de la Comunicación Interna, donde el desafío principal consiste en construir una nueva identidad y cultura organizacional dentro del ambiente interno del Instituto.</p>
                     <p>Además, en el sector, nos desempeñamos de manera conjunta para la planificación, ejecución y evaluación de campañas y planes anuales de comunicación.</p>
+                    <div class="head-exp">
+                        <div class="año">2020</div>
+                        <div class="empresa">Madres Víctimas de Trata (ONG)</div>
+                    </div>
+                    <p>Me desarrollo como voluntaria dentro de la Comisión de Comunicación, donde realizo principalmente tareas de comunicación con la prensa y comunicación digital en las redes sociales.</p>
+                    <p>Entre esas tareas principales se detallan: realizar publicaciones tanto en las redes sociales como en la página web (principalmente en la sección de prensa), redacción de textos, realización de piezas de diseño para publicar junto a cada publicación escrita y envío de gacetillas/comunicados de prensa. También realizamos acciones, ya sea digitales o en terreno, para visibilizar la causa de la ONG: algunas de estas acciones son aprovechando días especiales y otras que se realizan de manera periódica (como rondas mensuales al rededor de Plaza de Mayo con las madres de las víctimas desaparecidas, personas que se solidarizan con la causa y un grupo de artistas de una organización amiga que se ofrecen para aportar a la acción una manifestación artística). Además, gestionamos y organizamos entrevistas con medios de comunicación, periodistas, influencers o cuentas de organizaciones feministas abolicionistas de la prostitución y la trata con fines de explotación sexual. En ellas se suelen entrevistas a sobrevivientes de prostitución o de trata, como así también a Margarita Meira (fundadora de la ONG, madre de víctima de trata) o a integrantes que representan a la ONG y su causa como voceras.</p>
                 </div>
             </div>
         </main>
